# LZW

./: CMakeLists.txt  README.txt
data/: input4.lzw
include/: Decoder.h  Encoder.h  FileStream.h  Trie.h
src/: Decoder.cpp  Encoder.cpp  Trie.cpp
